add_subdirectory(Drivers)
add_subdirectory(Middlewares)
add_subdirectory(Arduino_Core_Buddy)
add_subdirectory(LiquidCrystal_I2C)
add_subdirectory(QR)
add_subdirectory(WUI)
add_subdirectory(ESP)
add_subdirectory(libsysbase)
if(NOT CMAKE_CROSSCOMPILING)
  add_subdirectory(Catch2)
endif()
include(AddTMCStepper.cmake)
include(AddMarlin.cmake)
include(AddInih.cmake)
include(AddJsmn.cmake)
include(AddPrintf.cmake)
include(AddSegger.cmake)
include(AddTinyusb.cmake)
