set_directory_properties(PROPERTIES EXCLUDE_FROM_ALL TRUE)

add_subdirectory(Drivers)
add_subdirectory(Middlewares)
add_subdirectory(Arduino_Core_Buddy)
add_subdirectory(QR)
add_subdirectory(WUI)
add_subdirectory(libsysbase)
if(NOT CMAKE_CROSSCOMPILING)
  add_subdirectory(Catch2)
endif()
include(AddSG14.cmake)
include(AddTMCStepper.cmake)
include(AddMarlin.cmake)
include(AddInih.cmake)
include(AddJsmn.cmake)
include(AddPrintf.cmake)
include(AddSegger.cmake)
include(AddMMU2.cmake)
include(AddTinyusb.cmake)
include(AddLiblightmodbus.cmake)
include(AddCrashCatcher.cmake)
include(AddPrusaErrorCodes.cmake)
include(AddLibbgcode.cmake)
include(AddHeatshrink.cmake)
include(AddCppStdExtensions.cmake)
include(AddMagicEnum.cmake)
include(AddSFLLibrary.cmake)
